Fix to the access menu on mobile (DEV)

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -62,40 +62,40 @@
         li ul li > a {
             background: none;
         }
+    }
 
-        .sub-nav {
-            position: absolute;
-            z-index: 200;
-            background-color: #ffffff;
-            border-radius: 5px;
-            padding: 25px 35px;
-            box-shadow: 0px 21px 18px -5px rgba(0, 0, 0, 0.45);
-            display: none;
-            margin-left: -26px;
+    .sub-nav {
+        position: absolute;
+        z-index: 200;
+        background-color: #ffffff;
+        border-radius: 5px;
+        padding: 25px 35px;
+        box-shadow: 0px 21px 18px -5px rgba(0, 0, 0, 0.45);
+        display: none;
+        margin-left: -26px;
 
-            @media screen and (max-width: $breakpoint-medium) {
-                display: block;
-                position: relative;
-                margin-left: 0;
-                box-shadow: none;
-                border-radius: 0;
-                padding: 0px 10px 20px;
+        @media screen and (max-width: $breakpoint-medium) {
+            display: block;
+            position: relative;
+            margin-left: 0;
+            box-shadow: none;
+            border-radius: 0;
+            padding: 0px 10px 20px;
+        }
+
+        li a {
+            line-height: 1.5;
+            margin-top: 8px !important;
+            font-weight: 500 !important;
+            text-transform: initial !important;
+            color: #777 !important;
+
+            &:hover {
+                color: $header-bar-color !important;
             }
 
-            li a {
-                line-height: 1.5;
-                margin-top: 8px !important;
-                font-weight: 500 !important;
-                text-transform: initial !important;
-                color: #777 !important;
-
-                &:hover {
-                    color: $header-bar-color !important;
-                }
-
-                @media screen and (max-width: $breakpoint-medium) {
-                    font-size: 0.85rem;
-                }
+            @media screen and (max-width: $breakpoint-medium) {
+                font-size: 0.85rem;
             }
         }
     }
@@ -136,6 +136,12 @@
                         background-color: $action-btn-color;
                     }
                 }
+            }
+        }
+
+        .sub-nav {
+            @media screen and (max-width: $breakpoint-medium) {
+                display: none;
             }
         }
     }
